# DeepSeek-V3

./: .gitignore  CODE_OF_CONDUCT.md  INTRO.rst  LICENSE-CODE  LICENSE-COMMERCIAL  LICENSE-MODEL  LICENSE-MODEL.md  MACBOOK_SETUP.md  README-bak.md  README.md  README_ES.md  README_Turkish.md  README_WEIGHTS.md  README_WEIGHTS_ES.md  README_zh.md  app.py  console.js  demo_function_calling.py  fix_moe_symbolic_shapes.py  fork.txt  function Meidanshahi_Complete_gaoptimset()  hi.txt  pyproject.toml  requirements.txt  resumen.md  sudo su && README.md  test_fix.py  test_moe.py  tokenizer_config.json
.github/ISSUE_TEMPLATE/: Improvement.md  bug_report.md  chore.md  config.yml  discussion.md  documentation_update.md  feature_request.md  performance_Issue.md  question.md  security_issue.md  test_failure.md
.github/workflows/: generator-generic-ossf-slsa3-publish.yml
ASA700/: DeepSeek-V3،
docs/: function_calling.md
experimental/: README.md  SETUP.md  build.zig  build.zig.zon
experimental/bench/: blas_bench.zig  main.zig
experimental/src/: main.zig  test_m_series.zig
fuzz/: fuzz_target.py
inference/: README.md  bf16_cast_fp8.py  convert.py  cpu_kernel.py  fp8_cast_bf16.py  generate.py  kernel.py  model.py  optimized_generate.py  parser.py  requirements.txt  requirements_macbook.txt  test_kernel.py
inference/auto_fp8/: __init__.py  config.py
inference/configs/: config_macbook.json
inference/models/: __init__.py  attention.py  config.py  linear.py  moe.py
multi_node_test/: test.py
templates/: login.html  signup.html
tests/: test_accessibility.py
(+32 files in other folders)
